Add GraphQL schema and API diagrams for QooQuote project

--- a/docs/development/diagrams/2.api.md
+++ b/docs/development/diagrams/2.api.md
@@ -1,1 +1,164 @@
 # API Diagrams
+
+# QooQuote GraphQL Schema
+
+
+```graphql
+########################################
+# TYPES
+########################################
+
+type User {
+  id: ID!
+  email: String!
+  displayName: String
+  createdAt: String
+  updatedAt: String
+}
+
+type Post {
+  id: ID!
+  userId: ID!
+  genreId: ID
+  quoteText: String!
+  mediaUrl: String
+  isPublic: Boolean
+  isArchived: Boolean
+  createdAt: String
+  updatedAt: String
+  user: User          # To fetch the user who created the post
+  genre: Genre        # To fetch the genre details
+  tags: [Tag]         # If you want to fetch the tags from the many-to-many relationship
+}
+
+type Genre {
+  id: ID!
+  genreName: String!
+  description: String
+}
+
+type Tag {
+  id: ID!
+  tagName: String!
+}
+
+type Comment {
+  id: ID!
+  userId: ID!
+  postId: ID!
+  commentText: String!
+  createdAt: String
+  updatedAt: String
+  user: User
+  post: Post
+}
+
+type Like {
+  id: ID!
+  userId: ID!
+  postId: ID!
+  createdAt: String
+}
+
+type Follow {
+  followerId: ID!
+  followedId: ID!
+  createdAt: String
+}
+
+type Repost {
+  id: ID!
+  userId: ID!
+  originalPostId: ID!
+  createdAt: String
+}
+
+type Friendship {
+  id: ID!
+  requestorUserId: ID!
+  acceptorUserId: ID!
+  status: String
+  createdAt: String
+  updatedAt: String
+}
+
+type UserPreferences {
+  id: ID!
+  userId: ID!
+  preferenceKey: String!
+  preferenceValue: String!
+  createdAt: String
+  updatedAt: String
+}
+
+########################################
+# QUERIES
+########################################
+
+type Query {
+  # Users
+  getUser(id: ID!): User
+  getUsers: [User]
+
+  # Posts
+  getPost(id: ID!): Post
+  getPosts: [Post]
+
+  # Genres
+  getGenre(id: ID!): Genre
+  getGenres: [Genre]
+
+  # Tags
+  getTag(id: ID!): Tag
+  getTags: [Tag]
+
+  # Comments
+  getCommentsForPost(postId: ID!): [Comment]
+
+  # Follows
+  getFollows(userId: ID!): [Follow]
+
+  # Friendships
+  getFriendships(userId: ID!): [Friendship]
+
+  # Preferences
+  getUserPreferences(userId: ID!): [UserPreferences]
+}
+
+########################################
+# MUTATIONS
+########################################
+
+type Mutation {
+  # User-related
+  createUser(email: String!, password: String!, displayName: String): User
+  loginUser(email: String!, password: String!): String  # e.g. return a JWT token
+
+  # Posts
+  createPost(userId: ID!, genreId: ID, quoteText: String!, mediaUrl: String, isPublic: Boolean): Post
+  archivePost(postId: ID!): Post
+  deletePost(postId: ID!): Boolean
+
+  # Comments
+  createComment(userId: ID!, postId: ID!, commentText: String!): Comment
+  deleteComment(commentId: ID!): Boolean
+
+  # Likes
+  likePost(userId: ID!, postId: ID!): Like
+  unlikePost(likeId: ID!): Boolean
+
+  # Reposts
+  repost(userId: ID!, originalPostId: ID!): Repost
+
+  # Follows
+  followUser(followerId: ID!, followedId: ID!): Follow
+  unfollowUser(followerId: ID!, followedId: ID!): Boolean
+
+  # Friendships
+  sendFriendRequest(requestorUserId: ID!, acceptorUserId: ID!): Friendship
+  respondFriendRequest(friendshipId: ID!, status: String!): Friendship
+
+  # Preferences
+  setUserPreference(userId: ID!, preferenceKey: String!, preferenceValue: String!): UserPreferences
+}
+```
