Update documentation: refine database schema section, enhance API diagrams, and add UML diagrams for core components

--- a/docs/development/diagrams/1.data.md
+++ b/docs/development/diagrams/1.data.md
@@ -1,7 +1,9 @@
-# Database Schema
+# Database 
+
+We will use PSQL for the database.
 
 **This project is still in development and may change in the future. Be sure to check the latest version of the document.**
-
+## Schema
 
 ```mermaid
 erDiagram
