Update documentation: fix image path in system diagram, add development notice in API and UML diagrams

--- a/docs/development/diagrams/0.system.md
+++ b/docs/development/diagrams/0.system.md
@@ -227,7 +227,7 @@ sequenceDiagram
 
 The recommendation system is the core of the feed. It is responsible for generating personalized recommendations for each user. The system uses a combination of collaborative filtering and content-based filtering to generate recommendations. Inspired by Twitter's recommendation system, we will use a hybrid approach to generate recommendations.
 
-![The Algorithm](../assets/system-diagram.png)
+![The Algorithm](../../assets/system-diagram.png)
 
 Since this system is too complex for a short period of time, we will start with a simple recommendation system that will generate recommendations based on the user's preferences. We will use a simple collaborative filtering algorithm to generate recommendations using pg-vector.
 
