--- a/docs/development/diagrams/3.uml.md
+++ b/docs/development/diagrams/3.uml.md
@@ -1,6 +1,8 @@
 # UML
 
-## Clas Diagrams
+**This project is still in development and may change in the future. Be sure to check the latest version of the document.**
+
+## Class Diagrams
 
 ### Users
 
