--- a/docs/development/diagrams/2.api.md
+++ b/docs/development/diagrams/2.api.md
@@ -2,6 +2,7 @@
 
 ## GraphQL Schema
 
+**This project is still in development and may change in the future. Be sure to check the latest version of the document.**
 
 ```graphql
 ########################################
@@ -26,10 +27,10 @@ type Post {
   isArchived: Boolean
   createdAt: String
   updatedAt: String
-  user: User          # To fetch the user who created the post
-  genre: Genre        # To fetch the genre details
-  tags: [Tag]         # If you want to fetch the tags from the many-to-many relationship
-}
+  user: User         
+  genre: Genre       
+  tags: [Tag]       
+  } 
 
 type Genre {
   id: ID!
@@ -132,7 +133,7 @@ type Query {
 type Mutation {
   # User-related
   createUser(email: String!, password: String!, displayName: String): User
-  loginUser(email: String!, password: String!): String  # e.g. return a JWT token
+  loginUser(email: String!, password: String!): String 
 
   # Posts
   createPost(userId: ID!, genreId: ID, quoteText: String!, mediaUrl: String, isPublic: Boolean): Post
